--- a/proyecto-general-horoscopo/horoscopo/src/components/styles/UserHome.css
+++ b/proyecto-general-horoscopo/horoscopo/src/components/styles/UserHome.css
@@ -1,10 +1,10 @@
-.container{
+.container {
     height: 300px;
     display: grid;
     place-items: center;
 }
 
-#selectSignos{
+#selectSignos {
     margin-top: 0px;
     margin: 100px;
     width: 400px;
@@ -14,14 +14,24 @@
     color: white;
 }
 
-#txtSeleccionPage{
+#selectgenero {
+    margin-top: 0px;
+    margin: 100px;
+    width: 400px;
+    padding: 5px 50px 5px 10px;
+    border-radius: 10px;
+    background-color: rgb(72, 63, 63);
+    color: white;
+}
+
+#txtSeleccionPage {
     padding: 50px;
     padding-bottom: 0px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-style: italic  ;
+    font-style: italic;
 }
 
-#btnHome{
+#btnHome {
     margin-top: 100px;
     background-color: blue;
     color: white;
