--- a/proyecto-general-horoscopo/horoscopo/src/components/styles/UserHome.css
+++ b/proyecto-general-horoscopo/horoscopo/src/components/styles/UserHome.css
@@ -13,6 +13,16 @@
     background-color: rgb(71, 63, 63);
     color: white;
 }
+#selectgenero{
+    margin-top: 0px;
+    margin: 100px;
+    width: 400px;
+    padding: 5px 50px 5px 10px;
+    border-radius: 10px;
+    background-color: rgb(71, 63, 63);
+    color: white;
+}
+
 
 #txtSeleccionPage{
     padding: 50px;
