--- a/proyecto-general-horoscopo/horoscopo/src/components/styles/Form.css
+++ b/proyecto-general-horoscopo/horoscopo/src/components/styles/Form.css
@@ -1,19 +1,20 @@
-body{
+/* Form.css */
+body {
     justify-content: center;
     text-align: center;
 }
 
-.entry{
+.entry {
     border-radius: 10px;
     padding: 10px 20px 10px 35px;
 }
 
-form{
+form {
     padding: 20px;
     padding-top: 10%;
 }
 
-#btnEnviar{
+#btnEnviar {
     margin-top: 20px;
     background-color: rgb(48, 27, 238);
     padding: 5px;
@@ -24,12 +25,28 @@ form{
     color: white;
 }
 
-.txt{
+.txt {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-#txtBienvenida{
+#txtBienvenida {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-style: oblique;
     color: white;
+}
+
+/* Estilos para el botón de cambiar contraseña */
+#btnChangePassword {
+    margin-top: 10px;
+    background-color: rgb(194, 4, 4);
+    padding: 5px 20px;
+    border-radius: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+#btnChangePassword:hover {
+    background-color: rgb(219, 9, 9);
 }
