--- a/proyecto-general-horoscopo/horoscopo/src/components/styles/TextSigno.css
+++ b/proyecto-general-horoscopo/horoscopo/src/components/styles/TextSigno.css
@@ -1,8 +1,6 @@
 #textoSigno{
     border-radius: 10px;
     display: flex;
-    background-color: rgba(71, 63, 63, 0.021);
-    color:rgb(77, 56, 1);
-    margin: 10px;
-    font-size: 20px;
+    background-color: rgb(95, 82, 82);
+    color: white;
 }
