--- a/proyecto-general-horoscopo/horoscopo/src/components/styles/UserHome.css
+++ b/proyecto-general-horoscopo/horoscopo/src/components/styles/UserHome.css
@@ -1,47 +1,32 @@
 .container{
     height: 300px;
     display: grid;
-    justify-content: center;
-    margin: 20px;
-    padding: 20px;
-    
-}
-#Selects{
-   margin: 20px;
-    
+    place-items: center;
 }
 
 #selectSignos{
-   
-    margin: 10px;
-    width: 200px;   
+    margin-top: 0px;
+    margin: 100px;
+    width: 400px;
+    padding: 5px 50px 5px 10px;
     border-radius: 10px;
-    background-color: rgba(71, 63, 63, 0.021);
-    color: rgb(77, 56, 1);
-}
-#selectPerfil{
-    
-    margin: 10px;
-    width: 200px;   
-    border-radius: 10px;
-    background-color: rgba(71, 63, 63, 0.021);
-    color:rgb(77, 56, 1);
+    background-color: rgb(71, 63, 63);
+    color: white;
 }
 
 #txtSeleccionPage{
-    padding: 30px;    
+    padding: 50px;
+    padding-bottom: 0px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: italic  ;
 }
 
 #btnHome{
-    
-    background-color: rgb(77, 56, 1);
-    color: white;    
-    width: 70px;
-    padding: 5px;
+    margin-top: 100px;
+    background-color: blue;
+    color: white;
+    padding: 50px;
+    padding-bottom: 5px;
+    padding-top: 5px;
     border-radius: 10px;
-    margin: 10px;
-    
-   
 }
