--- a/proyecto-general-horoscopo-frony-back/horoscopo/src/components/styles/AdminHome.css
+++ b/proyecto-general-horoscopo-frony-back/horoscopo/src/components/styles/AdminHome.css
@@ -1,3 +1,7 @@
+body{
+    background-color: rgb(200, 199, 199);
+}
+
 .container{
     height: 300px;
     display: grid;
@@ -5,8 +9,17 @@
 }
 
 #editSignos{
-    margin-top: 0px;
     margin: 100px;
+    margin-top: 0px;
+    width: 400px;
+    padding: 5px 50px 5px 10px;
+    border-radius: 10px;
+    background-color: rgb(71, 63, 63);
+    color: white;
+}
+#editCategorias{
+    margin-top: 0px;
+    margin: 10px;
     width: 400px;
     padding: 5px 50px 5px 10px;
     border-radius: 10px;
