--- a/proyecto-general-horoscopo-frony-back/horoscopo/src/components/styles/UserHome.css
+++ b/proyecto-general-horoscopo-frony-back/horoscopo/src/components/styles/UserHome.css
@@ -5,8 +5,17 @@
 }
 
 #selectSignos{
-    margin-top: 0px;
     margin: 100px;
+    margin-top: 0px;
+    width: 400px;
+    padding: 5px 50px 5px 10px;
+    border-radius: 10px;
+    background-color: rgb(71, 63, 63);
+    color: white;
+}
+#seleccionC{
+    margin: 20px;
+    margin-top: 0px;
     width: 400px;
     padding: 5px 50px 5px 10px;
     border-radius: 10px;
