--- a/proyecto-general-horoscopo/horoscopo/src/components/styles/Form.css
+++ b/proyecto-general-horoscopo/horoscopo/src/components/styles/Form.css
@@ -5,7 +5,10 @@ body{
 
 .entry{
     border-radius: 10px;
-    padding: 10px 20px 10px 35px;
+    width: 250px;
+    padding: 10px;
+    border-color: rgb(73, 44, 1);
+    
 }
 
 form{
@@ -14,22 +17,21 @@ form{
 }
 
 #btnEnviar{
-    margin-top: 20px;
-    background-color: rgb(48, 27, 238);
-    padding: 5px;
-    padding-left: 35px;
-    padding-right: 35px;
-    border-radius: 15px;
+    margin: 10px;
+    background-color: rgb(73, 44, 1);
+    padding: 10px;    
+    border-radius: 10px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: white;
 }
 
 .txt{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: rgb(73, 44, 1);
 }
 
 #txtBienvenida{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-style: oblique;
-    color: white;
+    font-style: initial;
+    color: rgb(73, 44, 1);
 }
