--- a/proyecto-general-horoscopo/proyecto-general-horoscopo/horoscopo/src/components/styles/Form.css
+++ b/proyecto-general-horoscopo/proyecto-general-horoscopo/horoscopo/src/components/styles/Form.css
@@ -33,3 +33,18 @@ form{
     font-style: oblique;
     color: white;
 }
+
+
+
+  
+#constbuttonStyle {
+    margin-top: 20px;
+    background-color: rgb(48, 27, 238);
+    padding: 5px;
+    padding-left: 35px;
+    padding-right: 35px;
+    border-radius: 15px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
+}
+ 
