--- a/login_proyecto-general-horoscopo/horoscopo/src/components/styles/UserHome.css
+++ b/login_proyecto-general-horoscopo/horoscopo/src/components/styles/UserHome.css
@@ -5,18 +5,8 @@
 }
 
 #selectSignos{
-    margin-inline: 0px;
-    margin: 0px;
-    width: 400px;
-    padding: 5px 50px 5px 10px;
-    border-radius: 10px;
-    background-color: rgb(71, 63, 63);
-    color: white;
-}
-
-#selectPerson{
-    margin-inline: 0px;
-    margin: 50px;
+    margin-top: 0px;
+    margin: 100px;
     width: 400px;
     padding: 5px 50px 5px 10px;
     border-radius: 10px;
