--- a/proyecto-general-horoscopo/horoscopo/src/components/styles/Form.css
+++ b/proyecto-general-horoscopo/horoscopo/src/components/styles/Form.css
@@ -34,7 +34,16 @@ form{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: white;
 }
-
+#btnNew{
+    margin-top: 20px;
+    background-color: rgb(48, 27, 238);
+    padding: 5px;
+    padding-left: 35px;
+    padding-right: 35px;
+    border-radius: 15px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
+}
 .txt{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
