Arreglo de Css de los botones (Parcial 1)

--- a/proyecto-general-horoscopo/horoscopo/src/components/styles/AdminHome.css
+++ b/proyecto-general-horoscopo/horoscopo/src/components/styles/AdminHome.css
@@ -44,3 +44,32 @@
     background-color: blue;
     color: white
 }
+
+    #btnRegistro{
+        margin-top: 15px;
+        padding: 5px;
+        padding-left: 15px;
+        padding-right: 15px;
+        border-radius: 10px;
+        background-color: blue;
+        color: white
+}
+
+#btnActualizar{
+    margin-top: 15px;
+    padding: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 10px;
+    background-color: blue;
+    color: white
+}
+#btnIngresar{
+    margin-top: 15px;
+    padding: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 10px;
+    background-color: blue;
+    color: white
+}
