--- a/horoscopo/src/components/styles/Form.css
+++ b/horoscopo/src/components/styles/Form.css
@@ -33,3 +33,26 @@ form{
     font-style: oblique;
     color: white;
 }
+
+.button {
+    background-color: #4CAF50; 
+    color: white; 
+    padding: 10px 20px; 
+    border: none; 
+    border-radius: 5px; 
+    cursor: pointer; 
+    font-size: 16px; 
+    transition: background-color 0.3s; 
+}
+
+.button:hover {
+    background-color: #45a049; 
+}
+
+.button:focus {
+    outline: none; 
+}
+
+.button:active {
+    background-color: #3e8e41; 
+}
