cambios en horoscopo

--- a/proyecto-general-horoscopo/horoscopo/src/components/styles/Form.css
+++ b/proyecto-general-horoscopo/horoscopo/src/components/styles/Form.css
@@ -67,3 +67,18 @@ form {
     background-color: rgb(213, 255, 24);
     /* Cambia el color al pasar el cursor */
 }
+
+#btnCreateAdmin {
+    margin-top: 10px;
+    background-color: rgb(16, 216, 238);
+    padding: 5px 20px;
+    border-radius: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+#btnCreateAdmin:hover {
+    background-color: rgb(24, 245, 255);
+}
