--- a/parcial_1/horoscopo/src/components/styles/AdminHome.css
+++ b/parcial_1/horoscopo/src/components/styles/AdminHome.css
@@ -1,10 +1,10 @@
-.container{
+.container {
     height: 300px;
     display: grid;
     place-items: center;
 }
 
-#editSignos{
+#editSignos {
     display: block;  
     margin-bottom: 10px;
     margin-top: 0px;
@@ -12,37 +12,39 @@
     width: 400px;
     padding: 5px 50px 5px 10px;
     border-radius: 10px;
-    background-color: rgb(71, 63, 63);
-    color: white;
+    background-color: red; /* Fondo rojo brillante */
+    color: white; /* Texto en blanco */
 }
 
-#btnEditar{
+#btnEditar {
     margin-top: 10%;
     padding: 10px;
     padding-left: 20px;
     padding-right: 20px;
     border-radius: 10px;
-    background-color: brown;
-    color: white;
+    background-color: black; /* Fondo negro */
+    color: white; /* Texto en blanco */
 }
 
-#textoAdmin{
+#textoAdmin {
     font-style: italic;
+    color: white; /* Texto en blanco */
 }
 
-#textoEditar{
+#textoEditar {
     border-radius: 10px;
     display: flex;
-    background-color: rgb(95, 82, 82);
-    color: white;
+    background-color: #330000; /* Fondo rojo oscuro */
+    color: white; /* Texto en blanco */
 }
 
-#btnHomeAdmin{
+#btnHomeAdmin {
     margin-top: 15px;
     padding: 5px;
     padding-left: 15px;
     padding-right: 15px;
     border-radius: 10px;
-    background-color: blue;
-    color: white
+    background-color: red; /* Fondo rojo */
+    color: white; /* Texto en blanco */
+    border: none; /* Sin borde */
 }
