--- a/parcial_1/horoscopo/src/components/styles/UserHome.css
+++ b/parcial_1/horoscopo/src/components/styles/UserHome.css
@@ -1,10 +1,10 @@
-.container{
+.container {
     height: 300px;
     display: grid;
     place-items: center;
 }
 
-#selectSignos{
+#selectSignos {
     display: block;  
     margin-bottom: 10px;
     margin-top: 0px;
@@ -12,23 +12,25 @@
     width: 400px;
     padding: 5px 50px 5px 10px;
     border-radius: 10px;
-    background-color: rgb(71, 63, 63);
-    color: white;
+    background-color: #330000; /* Fondo rojo oscuro */
+    color: white; /* Texto en blanco */
 }
 
-#txtSeleccionPage{
+#txtSeleccionPage {
     padding: 50px;
     padding-bottom: 0px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-style: italic  ;
+    font-style: italic;
+    color: white; /* Texto en blanco */
 }
 
-#btnHome{
+#btnHome {
     margin-top: 100px;
-    background-color: blue;
-    color: white;
+    background-color: red; /* Fondo rojo */
+    color: white; /* Texto en blanco */
     padding: 50px;
     padding-bottom: 5px;
     padding-top: 5px;
     border-radius: 10px;
+    border: none; /* Sin borde */
 }
